add logical device manager to manage logical device

--- a/VulkanGame.vcxproj
+++ b/VulkanGame.vcxproj
@@ -123,11 +123,13 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="GfxDeviceManager.cpp" />
+    <ClCompile Include="LogicalDeviceManager.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="VulkanInstance.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GfxDeviceManager.h" />
+    <ClInclude Include="LogicalDeviceManager.h" />
     <ClInclude Include="stb_image.h" />
     <ClInclude Include="VulkanInstance.h" />
   </ItemGroup>
