--- a/VulkanGame.vcxproj
+++ b/VulkanGame.vcxproj
@@ -125,12 +125,14 @@
     <ClCompile Include="GfxDeviceManager.cpp" />
     <ClCompile Include="LogicalDeviceManager.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="SwapChainManager.cpp" />
     <ClCompile Include="VulkanInstance.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GfxDeviceManager.h" />
     <ClInclude Include="LogicalDeviceManager.h" />
     <ClInclude Include="stb_image.h" />
+    <ClInclude Include="SwapChainManager.h" />
     <ClInclude Include="VulkanInstance.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
