create shader compilation bat file and shader module class

--- a/VulkanGame.vcxproj
+++ b/VulkanGame.vcxproj
@@ -127,6 +127,7 @@
     <ClCompile Include="GfxDeviceManager.cpp" />
     <ClCompile Include="LogicalDeviceManager.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="ShaderModulecpp.cpp" />
     <ClCompile Include="SwapChainManager.cpp" />
     <ClCompile Include="VulkanInstance.cpp" />
   </ItemGroup>
@@ -135,6 +136,7 @@
     <ClInclude Include="CommonImage.h" />
     <ClInclude Include="GfxDeviceManager.h" />
     <ClInclude Include="LogicalDeviceManager.h" />
+    <ClInclude Include="ShaderModule.h" />
     <ClInclude Include="stb_image.h" />
     <ClInclude Include="SwapChainManager.h" />
     <ClInclude Include="VulkanInstance.h" />
