--- a/VulkanGame.vcxproj
+++ b/VulkanGame.vcxproj
@@ -127,10 +127,12 @@
     <ClCompile Include="CommonImage.cpp" />
     <ClCompile Include="GfxDeviceManager.cpp" />
     <ClCompile Include="GraphicsEngine.cpp" />
+    <ClCompile Include="LevelManager.cpp" />
     <ClCompile Include="LogicalDeviceManager.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="PipelineModule.cpp" />
     <ClCompile Include="RenderPassModule.cpp" />
+    <ClCompile Include="ResourceLoader.cpp" />
     <ClCompile Include="ShaderModule.cpp" />
     <ClCompile Include="SwapChainManager.cpp" />
     <ClCompile Include="VulkanInstance.cpp" />
@@ -141,9 +143,11 @@
     <ClInclude Include="CommonImage.h" />
     <ClInclude Include="GfxDeviceManager.h" />
     <ClInclude Include="GraphicsEngine.h" />
+    <ClInclude Include="LevelManager.h" />
     <ClInclude Include="LogicalDeviceManager.h" />
     <ClInclude Include="PipelineModule.h" />
     <ClInclude Include="RenderPassModule.h" />
+    <ClInclude Include="ResourceLoader.h" />
     <ClInclude Include="ShaderModule.h" />
     <ClInclude Include="stb_image.h" />
     <ClInclude Include="SwapChainManager.h" />
