add image texture loader

--- a/VulkanGame.vcxproj
+++ b/VulkanGame.vcxproj
@@ -127,6 +127,7 @@
     <ClCompile Include="CommonImage.cpp" />
     <ClCompile Include="GfxDeviceManager.cpp" />
     <ClCompile Include="GraphicsEngine.cpp" />
+    <ClCompile Include="ImageTextureLoader.cpp" />
     <ClCompile Include="LevelManager.cpp" />
     <ClCompile Include="LogicalDeviceManager.cpp" />
     <ClCompile Include="main.cpp" />
@@ -143,6 +144,7 @@
     <ClInclude Include="CommonImage.h" />
     <ClInclude Include="GfxDeviceManager.h" />
     <ClInclude Include="GraphicsEngine.h" />
+    <ClInclude Include="ImageTextureLoader.h" />
     <ClInclude Include="LevelManager.h" />
     <ClInclude Include="LogicalDeviceManager.h" />
     <ClInclude Include="PipelineModule.h" />
