move files to scene management folder

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,8 @@ set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)
 
 set(SOURCE_FILES ${PROJECT_SOURCE_DIR}/src/main.cpp)
 AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/src SOURCE_FILES) 
-AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/src/GameObjects SOURCE_FILES) 
+AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/src/GameObjects SOURCE_FILES)
+AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/src/SceneManagement SOURCE_FILES) 
 
 add_executable(VulkanGame ${SOURCE_FILES})
 
@@ -28,6 +29,7 @@ target_include_directories(VulkanGame
 		"${PROJECT_BINARY_DIR}"
 		"${PROJECT_SOURCE_DIR}/src/"
 		"${PROJECT_SOURCE_DIR}/src/GameObjects"
+		"${PROJECT_SOURCE_DIR}/src/SceneManagement"
 		"${PROJECT_SOURCE_DIR}/src/ThirdParty")
 
 
