--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,7 @@ set(SOURCE_FILES ${PROJECT_SOURCE_DIR}/src/main.cpp)
 AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/src SOURCE_FILES) 
 AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/src/GameObjects SOURCE_FILES)
 AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/src/SceneManagement SOURCE_FILES) 
+AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/src/Resources SOURCE_FILES) 
 
 add_executable(VulkanGame ${SOURCE_FILES})
 
@@ -30,6 +31,7 @@ target_include_directories(VulkanGame
 		"${PROJECT_SOURCE_DIR}/src/"
 		"${PROJECT_SOURCE_DIR}/src/GameObjects"
 		"${PROJECT_SOURCE_DIR}/src/SceneManagement"
+		"${PROJECT_SOURCE_DIR}/src/Resources"
 		"${PROJECT_SOURCE_DIR}/src/ThirdParty")
 
 
