add perlin noise class

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,7 @@ set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)
 
 set(SOURCE_FILES ${PROJECT_SOURCE_DIR}/src/main.cpp)
 AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/src SOURCE_FILES) 
+AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/src/Math SOURCE_FILES)
 AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/src/GameObjects SOURCE_FILES)
 AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/src/SceneManagement SOURCE_FILES) 
 AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/src/Resources SOURCE_FILES) 
@@ -29,6 +30,7 @@ target_include_directories(VulkanGame
 	PRIVATE
 		"${PROJECT_BINARY_DIR}"
 		"${PROJECT_SOURCE_DIR}/src/"
+		"${PROJECT_SOURCE_DIR}/src/Math"
 		"${PROJECT_SOURCE_DIR}/src/GameObjects"
 		"${PROJECT_SOURCE_DIR}/src/SceneManagement"
 		"${PROJECT_SOURCE_DIR}/src/Resources"
