add reference to game object to behavior class

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,7 +10,8 @@ AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/src SOURCE_FILES)
 AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/src/Math SOURCE_FILES)
 AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/src/GameObjects SOURCE_FILES)
 AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/src/SceneManagement SOURCE_FILES) 
-AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/src/Resources SOURCE_FILES) 
+AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/src/Resources SOURCE_FILES)  
+AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/src/Rendering SOURCE_FILES) 
 
 add_executable(VulkanGame ${SOURCE_FILES})
 
@@ -34,6 +35,7 @@ target_include_directories(VulkanGame
 		"${PROJECT_SOURCE_DIR}/src/GameObjects"
 		"${PROJECT_SOURCE_DIR}/src/SceneManagement"
 		"${PROJECT_SOURCE_DIR}/src/Resources"
-		"${PROJECT_SOURCE_DIR}/src/ThirdParty")
+		"${PROJECT_SOURCE_DIR}/src/ThirdParty"
+		"${PROJECT_SOURCE_DIR}/src/Rendering")
 
 
