reorg some files. address some compiler warnings

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,10 @@ set(SOURCE_FILES ${PROJECT_SOURCE_DIR}/src/main.cpp)
 AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/src SOURCE_FILES) 
 AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/src/Math SOURCE_FILES)
 AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/src/GameObjects SOURCE_FILES)
+AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/src/GameObjects/FontObjects SOURCE_FILES)
+AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/src/GameObjects/Mothership SOURCE_FILES)
+AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/src/GameObjects/Msc SOURCE_FILES)
+AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/src/GameObjects/Player SOURCE_FILES)
 AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/src/SceneManagement SOURCE_FILES) 
 AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/src/Resources SOURCE_FILES)  
 AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/src/Rendering SOURCE_FILES) 
